fixed text color in dark mode

--- a/style.css
+++ b/style.css
@@ -45,10 +45,11 @@ h1{
     box-sizing: border-box;
     padding: 12px 20px;
     width: 100%;
-    background: none;
+    background-color: var(--primary-color);
     border: 2px solid var(--secondary-color);
     border-radius: 1000px;
     font: inherit;
+    color: var(--text-color);
     
     caret-color: var(--accent-color);
 }
@@ -189,7 +190,7 @@ input[type="checkbox"]{
 body.light {
   --background: #101114;
     --primary-color: #1C1D20;
-    --secondary-color: #4A4D57;
+    --secondary-color: #eff1f7;
     --accent-color: #0f83ff;
     --text-color: #F9F9F9;
 }
